styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  scroll-behavior: smooth;
  z-index: auto;
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.bg-image {
  background: linear-gradient(to left, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/images/wallpaper.jpg');
  background-size: cover;
  background-position: right;
}

.fix-borders:not(:last-of-type) {
  border-bottom: 0;
}

.btn-shadow:hover {
  box-shadow: rgba(198, 31, 232, 0.983) 0px 0px 1px 0px inset, rgba(174, 19, 213, 0.923) 0px 5px 10px -2px, rgba(186, 27, 207, 0.924) 0px 30px 60px -30px;
  border-color: rgba(48, 8, 56, 0.983);
}

.btn-shadow:hover > * {
  color: rgba(167, 12, 198, 0.983)
}

/* .no-scroll {
  overflow: hidden;
} */

.load-spinner {
  animation: spin 1.5s cubic-bezier(0.455, 0.03, 0.515, 0.955) infinite;
  /* animation: bounce2 2s linear infinite; */
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.height-minus-header {
  height: calc(100vh - 56px);
  top: 56px;
}

.mm-bg {
  background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.55)),linear-gradient(to bottom, #3498db, #2c3e50); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.bg-paper {
  background: linear-gradient(#c9b887 0 , hsl(49, 30%, 70%) 3% 95%, #c9b887 100%);
}

.bg-awesome {
  background: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.8)), url('/sick_bg.JPG');
  background-image: ;
}


/* .dropdown {
  overflow: hidden;
}

.dropdown.open {
  overflow: auto;
  animation: hide-scroll 1.2s backwards;
}

@keyframes hide-scroll {
  from, to { overflow: hidden; } 
} */

/* :focus {
  outline: 0 !important;
  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
} */
/* 
@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
  body {
    color: white;
    background: black;
  }
} */

